--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="card">
                         <img src ="images/pque.jpg" alt="">
                         <h3>PARAÑAQUE</h3>
-                        <p>81 Dr Arcadio Santos Ave, San Antonio, Parañaque, 1700 Metro Manila</p>
+                        <p>PCL Banner, Km 19 W Service Rd, Parañaque, Metro Manila</p>
                     <!--    <div class="icons">
                             <a href="#" class="fab fa-facebook-f"></a>
                             <a href="#" class="fab fa-twitter"></a>
